--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -102,8 +102,7 @@ nav {
 @media (max-width:400px){
     .main{
       background-position: left;
-        height: 400px;
-
+        height: screen;  
     }
     .img3, .img4{
         display: none;
