--- a/src/style/output.css
+++ b/src/style/output.css
@@ -631,18 +631,6 @@ video {
   top: 14rem;
 }
 
-.left-\[50\%\] {
-  left: 50%;
-}
-
-.top-1\/2 {
-  top: 50%;
-}
-
-.top-0 {
-  top: 0px;
-}
-
 .z-0 {
   z-index: 0;
 }
@@ -731,10 +719,6 @@ video {
   margin-top: 1.75rem;
 }
 
-.mr-10 {
-  margin-right: 2.5rem;
-}
-
 .inline-block {
   display: inline-block;
 }
@@ -783,10 +767,6 @@ video {
   height: 18rem;
 }
 
-.h-96 {
-  height: 24rem;
-}
-
 .h-\[25rem\] {
   height: 25rem;
 }
@@ -801,10 +781,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[full\] {
-  height: full;
 }
 
 .w-1\/4 {
@@ -851,24 +827,24 @@ video {
   width: 100%;
 }
 
-.w-\[\] {
-  width: ;
+.w-\[800px\] {
+  width: 800px;
 }
 
-.w-\[300px\] {
-  width: 300px;
+.w-\[900px\] {
+  width: 900px;
 }
 
-.w-\[400px\] {
-  width: 400px;
-}
-
-.w-\[500px\] {
-  width: 500px;
+.w-20 {
+  width: 5rem;
 }
 
 .min-w-full {
   min-width: 100%;
+}
+
+.min-w-0 {
+  min-width: 0px;
 }
 
 .max-w-4xl {
@@ -982,10 +958,6 @@ video {
 
 .justify-between {
   justify-content: space-between;
-}
-
-.justify-around {
-  justify-content: space-around;
 }
 
 .justify-evenly {
@@ -1210,20 +1182,12 @@ video {
   padding-bottom: 3rem;
 }
 
-.pr-0 {
-  padding-right: 0px;
-}
-
-.pt-7 {
-  padding-top: 1.75rem;
-}
-
-.pr-4 {
-  padding-right: 1rem;
-}
-
 .pl-4 {
   padding-left: 1rem;
+}
+
+.pr-0 {
+  padding-right: 0px;
 }
 
 .text-left {
@@ -1510,12 +1474,12 @@ video {
     margin-left: 0px;
   }
 
-  .sm\:ml-24 {
-    margin-left: 6rem;
-  }
-
   .sm\:inline-block {
     display: inline-block;
+  }
+
+  .sm\:hidden {
+    display: none;
   }
 
   .sm\:h-16 {
@@ -1528,6 +1492,22 @@ video {
 
   .sm\:w-\[500px\] {
     width: 500px;
+  }
+
+  .sm\:w-\[25rem\] {
+    width: 25rem;
+  }
+
+  .sm\:w-\[80\%\] {
+    width: 80%;
+  }
+
+  .sm\:w-\[50\%\] {
+    width: 50%;
+  }
+
+  .sm\:w-16 {
+    width: 4rem;
   }
 
   .sm\:grid-cols-2 {
@@ -1580,6 +1560,10 @@ video {
     padding-right: 2.5rem;
   }
 
+  .sm\:text-left {
+    text-align: left;
+  }
+
   .sm\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -1613,21 +1597,14 @@ video {
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
+
+  .sm\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 
 @media (min-width: 768px) {
-  .md\:ml-5 {
-    margin-left: 1.25rem;
-  }
-
-  .md\:ml-8 {
-    margin-left: 2rem;
-  }
-
-  .md\:ml-10 {
-    margin-left: 2.5rem;
-  }
-
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -1639,11 +1616,6 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:my-8 {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-  }
-
   .lg\:my-4 {
     margin-top: 1rem;
     margin-bottom: 1rem;
@@ -1671,6 +1643,14 @@ video {
 
   .lg\:w-\[700px\] {
     width: 700px;
+  }
+
+  .lg\:w-\[900px\] {
+    width: 900px;
+  }
+
+  .lg\:w-\[1200px\] {
+    width: 1200px;
   }
 
   .lg\:grid-cols-4 {
